--- a/awards.tex
+++ b/awards.tex
@@ -1,4 +1,5 @@
 \section{\texorpdfstring{\faTrophy\ Awards \& Honors}{Awards \& Honors}}
+\mycvitemPP{2021.07}{The National 2nd Prize in the 5th Planning Decision Support Model Design Contest(Chengyuan Cup)}{China}
 \mycvitemPP{2019.06}{China Scholarship Council(CSC)}{China}
 \mycvitemPP{2019.06}{The 2nd Grade Scholarship of Yonker Environmental Protection Scholarship}{China}
 \mycvitemPP{2019.06}{The 1st Grade Scholarship of Institute of Urban Environment, Chinese Academy of Sciences[\textit{No.3 in Institute}]}{Xiamen, China}
