--- a/cnlatex/education.tex
+++ b/cnlatex/education.tex
@@ -1,4 +1,4 @@
 \section{\texorpdfstring{\faUniversity\ 教育经历}{教育经历}}
 \mycvitemEDU{2020.01- \ 至 \ 今}{\songti{博士}}{\songtix{地理信息与对地观测学院（ITC）}}{特文特大学}{导师: Alfred Stein \ 教授, 贾鹏 \ 教授, 徐斐 \ 教授}{\songtix{空间生命历程流行病学与健康地理}}{地理空间数据获取与质量}{荷兰,恩斯赫德}
 \mycvitemEDU{2016.09-2019.06}{\songti{硕士}}{\songtix{中国科学院城市环境研究所}}{中国科学院大学}{导师: 任引 \ 研究员}{\songtix{耦合生态过程模型与排放清单的城市碳源汇分布空间制图研究}}{生态学}{中国,厦门}
-\mycvitemEDU{2012.09-2016.06}{\songti{学士}}{\songtix{地理科学学院}}{福建师范大学}{导师: 江辉仙 \ 副教授}{\songtix{基于BIM与GIS的智慧校园规划选址与设计——以福建师范大学为例}}{地理科学(国家人才培养基地)}{中国,福州}
+\mycvitemEDU{2012.09-2016.06}{\songti{学士}}{\songtix{地理科学学院}}{福建师范大学}{导师: 江辉仙 \ 教授}{\songtix{基于BIM与GIS的智慧校园规划选址与设计——以福建师范大学为例}}{地理科学(国家人才培养基地)}{中国,福州}
