--- a/cnlatex/awards.tex
+++ b/cnlatex/awards.tex
@@ -1,4 +1,5 @@
 \section{\texorpdfstring{\faTrophy\ 奖励 \& 荣誉}{奖励 \& 荣誉}}
+\mycvitemPP{2021.07}{第五届城垣杯规划决策支持模型设计大赛二等奖}{中国}
 \mycvitemPP{2019.06}{2019年国家公派留学奖学金（CSC）}{中国}
 \mycvitemPP{2019.06}{永清环保奖学金二等奖学金}{中国}
 \mycvitemPP{2019.06}{中国科学院城市环境研究所一等奖学金}{中国,厦门}
