--- a/publications.tex
+++ b/publications.tex
@@ -13,124 +13,130 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
+    Panfeng Dou, Shudi Zuo, Yin Ren, Manuel J. Rodriguez, \Shaoqing. (2021).
+    Refined water security assessment for sustainable water management: A case study of 15 key cities in the Yangtze River Delta, China.
+    \textit{Journal of Environmental Management}. \textit{290}, 112588.
+    \DOI{10.1016/j.jenvman.2021.112588}. [SCI, IF = 6.789].
+\item
     Peng Jia, \Shaoqing, Tong Wu, Shujuan Yang. (2021).
     New approaches to anticipate the risk of reverse zoonosis.
-    \textit{Trends in Ecology \& Evolution}. \textit{Accepted}. [SCI, IF = 14.764].
+    \textit{Trends in Ecology \& Evolution}. \textit{36}(7), 580-590.
+    \DOI{10.1016/j.tree.2021.03.012}. [SCI, IF = 17.712].
 \item
     Shujuan Yang, \Shaoqing, Yuling Huang, Peng Jia. (2021).
     Pitfalls in Modeling Asymptomatic COVID-19 Infection.
     \textit{Frontiers in Public Health}. \textit{9}, 593176.
-    \DOI{10.3389/fpubh.2021.593176}. [SCI, IF = 2.483].
+    \DOI{10.3389/fpubh.2021.593176}. [SCI, IF = 3.709].
 \item
     Lulu Song, \Shaoqing, Zhi Cao, Yupeng Liu, Weiqiang Chen. (2021).
     High spatial resolution mapping of steel resources accumulated above ground in mainland China: Past trends and future prospects.
     \textit{Journal of Cleaner Production}. \textit{297}, 144609.
-    \DOI{10.1016/j.jclepro.2021.126482}. [SCI, IF = 7.246].
+    \DOI{10.1016/j.jclepro.2021.126482}. [SCI, IF = 9.297].
 \item
     Shudi Zuo, Lianping Yang, Panfeng Dou, Hung Chak Ho, \Shaoqing, Wenjun Ma, Yin Ren, Cunrui Huang. (2020).
     The direct and interactive impacts of hydrological factors on bacillary dysentery across different geographical regions in central China.
     \textit{Science of the Total Environment}. \textit{764}, 144609.
-    \DOI{10.1016/j.scitotenv.2020.144609}. [SCI, IF = 6.551].
+    \DOI{10.1016/j.scitotenv.2020.144609}. [SCI, IF = 7.963].
 \item
-    \Shaoqing\CF, Yin Ren, Shudi Zuo, Chengyi Lai, Jiajia Li, Shengyu Xie, Bingchu Chen. (2020).
+    \Shaoqing\CF, Yin Ren\CF, Shudi Zuo, Chengyi Lai, Jiajia Li, Shengyu Xie, Bingchu Chen. (2020).
     Investigating the uncertainties propagation analysis of CO$_2$ emissions gridded maps at the urban scales: a case study of Jinjiang city, China. 
     \textit{Remote Sensing}. \textit{12}(23), 3932.
-    \DOI{10.3390/rs12233932}. [SCI, IF = 4.509]
+    \DOI{10.3390/rs12233932}. [SCI, IF = 4.848].
 \item
     \Shaoqing, Jiajia Li, WeiXu Yang, Fangyu Chen, Huixian Jiang. (2020).
     The Evaluation of Health Effect of Short-term Exposure to PM2.5 during Spring Festival: A Case Study of 25 Cities in the Yangtze River Delta.
     \textit{Shanghai Urban Planning Review}. \textit{05}, 22-29.
-    \DOI{10.11982/j.supr.20200504}. [in Chinese] 
+    \DOI{10.11982/j.supr.20200504}. [in Chinese].
 \item
     Peng Jia, \Shaoqing, Kristen. E. Rohli, Robert V. Rohli, Yanan Ma, Chao Yu, Xiongfeng Pan, Weiqi Zhou. (2020).
     Natural environment and childhood obesity: A systematic review.
     \textit{Obesity Reviews}. 1-9.
-    \DOI{10.1111/obr.13097}. [SCI, IF = 7.31]
+    \DOI{10.1111/obr.13097}. [SCI, IF = 9.213].
 \item
     XiaoFang Pan, Hu Li, Lixin Zhao, Xiaoru Yang, Jianqiang Su, \Shaoqing, Jing Ning, Chunxing Li, Guanjing Cai, GeFu Zhu. (2020).
     Response of syntrophic bacterial and methanogenic archaeal communities in paddy soil to soil type and phenological period of rice growth.
     \textit{Journal of Cleaner Production}. \textit{278}, 123418.
-    \DOI{10.1016/j.jclepro.2020.123418}. [SCI, IF = 7.246]
+    \DOI{10.1016/j.jclepro.2020.123418}. [SCI, IF = 9.297].
 \item
     Peng Jia, Xinxi Cao, Hongxi Yang, \Shaoqing, Pan He, Ganlin Huang, Tong Wu, Yaogang Wang. (2020).
     Green space access in the neighbourhood and childhood obesity.
     \textit{Obesity Reviews}. 1-12.
-    \DOI{10.1111/obr.13100}. [SCI, IF = 7.31]
+    \DOI{10.1111/obr.13100}. [SCI, IF = 9.213].
 \item
     Miyang Luo, Hanqi Li, Xiongfeng Pan, Teng Fei, \Shaoqing, Ge Qiu, Yuxuan Zou, Heleen Vos, Jiayou Luo, Peng Jia. (2020).
     Neighbourhood speed limit and childhood obesity.
     \textit{Obesity Reviews}. 1-11.
-    \DOI{10.1111/obr.13052}. [SCI, IF = 7.31]
+    \DOI{10.1111/obr.13052}. [SCI, IF = 9.213].
 \item
     Shengyu Xie, Guangwei Yu, Chunxing Li, Jie Li, Gang Wang, \Shaoqing, Yin Wang. (2020).
     Treatment of high-ash industrial sludge for producing improved char with low heavy metal toxicity.
     \textit{Journal of Analytical and Applied Pyrolysis}. \textit{150}, 104866.
-    \DOI{10.1016/j.jaap.2020.104866}. [SCI, IF = 3.905]
+    \DOI{10.1016/j.jaap.2020.104866}. [SCI, IF = 5.541].
 \item
     Xiongfeng Pan, Li Zhao, Jiayou Luo, Yinhao Li, Lin Zhang, Tong Wu, Melody Smith, \Shaoqing, Peng Jia. (2020).
     Access to bike lanes and childhood obesity: A systematic review and meta‐analysis.
     \textit{Obesity Reviews}. 1-11.
-    \DOI{10.1111/obr.13042}. [SCI, IF = 7.31]
+    \DOI{10.1111/obr.13042}. [SCI, IF = 9.213].
 \item
     \Shaoqing, Shudi Zuo, Yin Ren. (2020).
     A spatial database of CO$_2$ emissions, urban form fragmentation and city-scale effect related impact factors for the low carbon urban system in Jinjiang city, China.
     \textit{Data in Brief}. \textit{29}, 105274.
-    \DOI{10.1016/j.dib.2020.105274}. [ESCI, CiteScore = 1.5]
+    \DOI{10.1016/j.dib.2020.105274}. [ESCI, CiteScore = 1.7].
 \item
     Shudi Zuo, \Shaoqing, Yin Ren. (2019).
     More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales.
     \textit{Journal of Cleaner Production}. \textit{244}, 118659.
-    \DOI{10.1016/j.jclepro.2019.118659}. [SCI, IF = 7.246]
+    \DOI{10.1016/j.jclepro.2019.118659}. [SCI, IF = 9.297].
 \item
     Panfeng Dou, Shudi Zuo, Yin Ren, \Shaoqing, Guoliang Yun. (2019).
     The impacts of climate and land use/land cover changes on water yield service in Ningbo region.
     \textit{Acta Scientiae Circumstantiae}. \textit{39}(7), 2398-2409.
-    \DOI{10.13671/j.hjkxxb.2019.0122}. [CSCD, in Chinese] 
+    \DOI{10.13671/j.hjkxxb.2019.0122}. [CSCD, in Chinese].
 \item
     Qing Yang, Tianyue Huang, Saige Wang, Jiashuo Li, \Shaoqing, Sebastian Wright, Yuxuan Wang, Huaiwu Peng. (2019).
     A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
     \textit{Applied Energy}. \textit{247}, 254-269.
-    \DOI{10.1016/j.apenergy.2019.04.005}. [SCI, IF = 8.848]
+    \DOI{10.1016/j.apenergy.2019.04.005}. [SCI, IF = 9.746].
 \item
     Guoliang Yun, Yuanrong He, Yuantong Jiang, Panfeng Dou, \Shaoqing. (2019).
     PM2.5 spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
     \textit{Atmosphere}. \textit{10}(2), 55.
-    \DOI{10.3390/atmos10020055}. [SCI, IF = 2.397]
+    \DOI{10.3390/atmos10020055}. [SCI, IF = 2.686].
 \item
     Shudi Zuo, \Shaoqing, Xiaodong Song, Chengdong Xu, Yilan Liao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren. (2018).
     Determining the Mechanisms that Influence the Surface Temperature of Urban Forest Canopies by Combining Remote Sensing Methods, Ground Observations, and Spatial Statistical Models. 
     \textit{Remote Sensing}. \textit{10}(11), 1814.
-    \DOI{10.3390/rs10111814}. [SCI, IF = 4.509]
+    \DOI{10.3390/rs10111814}. [SCI, IF = 4.848].
 \item
     Shudi Zuo, \Shaoqing, Yaying Li, Jianfeng Tang, Yin Ren. (2018).
 	Analysis of Heavy Metal Sources in the Soil of Riverbanks Across an Urbanization Gradient.
     \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175.
-    \DOI{10.3390/ijerph15102175}. [SCI, IF = 2.849]
+    \DOI{10.3390/ijerph15102175}. [SCI, IF = 3.390].
 \item
     \Shaoqing, Huixian Jiang, Jiajia Li, Xian Su, Juan Wu, Yin Ren. (2018).
 	Influence of walking environment on robbery, snatch and theft crime in urban area, H city, China.
     \textit{Scientia Geographica Sinica}.  \textit{38}(8), 1235-1244.
-    \DOI{10.13249/j.cnki.sgs.2018.08.005}. [CSCD, in Chinese]
+    \DOI{10.13249/j.cnki.sgs.2018.08.005}. [CSCD, in Chinese].
 \item
     Guoliang Yun, Shudi Zuo, \Shaoqing, Xiaodong. Song, Chengdong Xu, Yilan Liao, Peiqiang Zhao, Weiyin Chang, Qi Chen, Yaying Li, Jianfeng Tang, Wang Man, Yin Ren. (2018).
 	Individual and Interactive Influences of Anthropogenic and Ecological Factors on Forest PM2.5 Concentrations at an Urban Scale.
     \textit{Remote Sensing}. \textit{10}(4), 521.
-    \DOI{10.3390/rs10040521}. [SCI, IF = 4.509]
+    \DOI{10.3390/rs10040521}. [SCI, IF = 4.848].
 \item
     Qin Ye, Gang Zeng, \Shaoqing, Fenglong Wang. (2018).
 	Research on the effects of different policy tools on China’s emissions reduction innovation.
     \textit{China Population, Resources and Environment}. \textit{28}(02), 115-122.
-    \DOI{10.12062/cpre.20170915}. [CSCD, in Chinese]
+    \DOI{10.12062/cpre.20170915}. [CSCD, in Chinese].
 \item
     Qin Ye, \Shaoqing, Gang Zeng. (2017).
 	Research on the effects of command-and-control and market-oriented policy tools on China’s energy conservation and emissions reduction innovation.
     \textit{Chinese Journal of Population Resources and Environment}. \textit{16}(1), 1-11.
-    \DOI{10.1080/10042857.2017.1418273}. [ESCI, CiteScore = 1.9]
+    \DOI{10.1080/10042857.2017.1418273}. [ESCI, CiteScore = 2.7].
 \item
     Miaoyi Li, \Shaoqing, Jingyuan Wang, Zhenjiang Shen. (2016).
 	The Analysis of Urban Spatial Development Pattern in Beijing Based on the Big Data of Government.
     \textit{Geomatics World}. \textit{23}(3), 20-26.
-    \DOI{10.3969/j.issn.1672-1586.2016.03.004}. [in Chinese]
+    \DOI{10.3969/j.issn.1672-1586.2016.03.004}. [in Chinese].
 %\end{etaremune}
 \end{enumerate}
 
@@ -183,23 +189,23 @@
 \item
     \Shaoqing, Jiajia Li, Weixu. Yang, Fangyu Chen, Huixian Jiang. (2020).
     The Evaluation of Health Effect of Short-term Exposure to PM2.5 during Spring Festival: A Case Study of 25 Cities in the Yangtze River Delta.
-    \textit{The Workshop of 16th Spatial Behavior and Planning \& Digitalization and Fine-Grained Governance, abstract}
+    \textit{The Workshop of 16th Spatial Behavior and Planning \& Digitalization and Fine-Grained Governance, abstract}.
 \item
     Jiajia Li, Yupeng Liu, \Shaoqing, Keying Xiang, Huixian Jiang, Weiqiang Chen. (2019).
     The night light uncovers city’s weight—A case study on estimating construction materials in Fuzhou, China.
-    \textit{10th International Conference on Industrial Ecology, abstract 320}
+    \textit{10th International Conference on Industrial Ecology, abstract 320}.
 \item
     \Shaoqing. (2018).
     The Scale Effect, Zoning Effect of Geographical Features, the Modified Areal Unit Problem and the Chanlleges of Spatial Stastistics.
-    \textit{11th Chinese R Language Conference, abstract}
+    \textit{11th Chinese R Language Conference, abstract}.
 \item
     \Shaoqing, Shudi Zuo, Yin Ren. (2018).
     High-resolution mapping of direct CO$_2$ emissions and uncertainties at the urban scale.
-    \textit{Proceedings of Spatial Accuracy 2018}. 88-90. [EI]
+    \textit{Proceedings of Spatial Accuracy 2018}. 88-90. [EI].
 \item
     \Shaoqing\CF, Xiaoman Zheng, Shudi Zuo, Yin Ren. (2018).
     Improving the prediction accuracy of forest aboveground biomass benchmark map by integrating machine learning and spatial statistics.
-    \textit{Proceedings of Spatial Accuracy 2018}. 80-83. [EI]
+    \textit{Proceedings of Spatial Accuracy 2018}. 80-83. [EI].
 \item
     Shudi Zuo, \Shaoqing, Yin Ren, Zhaowu Yu. (2017).
     Quantifying the linear and nonlinear relations between the urban form fragmentation and the carbon emission distribution.
@@ -247,10 +253,10 @@
 \begin{enumerate}
 %\begin{etaremune}
 \item
-    \Shaoqing\CF, Xiaoman Zheng, Lei Gao, Chengdong Xu, Shudi Zuo, Qi Chen, Xiaohua Wei, Yin Ren.
+    \Shaoqing\CF, Xiaoman Zheng\CF, Lei Gao, Chengdong Xu, Shudi Zuo, Qi Chen, Xiaohua Wei, Yin Ren.
     Improving plot-level model of forest aboveground biomass: A combined approach using machine learning with spatial statistics.
-    \textit{Forests}. 
-    (\Revision).
+    \textit{Ecosphere}. 
+    (\Review).
 \item
     Xiaoman Zheng, \Shaoqing, Qi Chen, Kim Calders, Chengdong Xu, Xiaohua Wei, Mazhan Zhuang, Yin Ren.
     Integrating Spatial Statistics and Machine Learning to Analyze Error Sources in Estimating Forest Aboveground Biomass from Airborne LiDAR Data.
@@ -259,12 +265,17 @@
 \item
     Weichao Wang, Xian Liu, Changwen Zhang, Fei Sheng, Shanjun Song, Penghui Li, \Shaoqing, Bin Wang, Dawei Lu, Luyao Zhang, Xuezhi Yang, Kuo Yang, Sijin Liu, Aiqian Zhang, Qian Liu, Guibin Jiang.
     Two-dimensional copper fingerprints in blood as biomarker for bladder cancer with machine learning.
-    \textit{Nature Communications}. 
+    \textit{}. 
     (\Submitted).
 \item
-    Peng Jia, Tong Wu, Amanda Irish, Ross C. Brownson, Yan Kestens, Miyang Luo, Shiyong Liu, \Shaoqing, Jing Su, Wenzhong Shi, Justin V. Remais, Gordon G. Liu, Shujuan Yang.
-    Causes and impact of COVID-19.
+    Peng Jia, Tong Wu, Ross C. Brownson, Yan Kestens, Miyang Luo, Shiyong Liu, \Shaoqing, Jing Su, Gordon G. Liu, Shujuan Yang.
+    Impacts of and vulnerability to the COVID-19 pandemic: a planetary health perspective.
     \textit{Engineering}. 
-    (\Revision).
+    (\Review).
+\item
+    Yupeng Liu, Jiajia Li, Weiqiang Chen, Lulu Song, \Shaoqing.
+    Quantifying Urban Weight Gain And Loss by A GIS-based Material Stocks And Flows Analysis.
+    \textit{Journal of Industrial Ecology}. 
+    (\Review).
 %\end{etaremune}
 \end{enumerate}
